--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
       "category": "public.app-category.utilities"
     },
     "files": [
-      "renderer.js",
-      "renderer.html",
+      "renderer",
       "configuration.js",
       "main.js"
     ]
